# tachometer

./: Cargo.toml  README.md  color_convention.txt
src/: console.rs  interrupts.rs  main.rs  panic.rs  pins.rs  rpm.rs  seven_segment_display.rs  shared.rs  shift_register.rs  state.rs
